# meeting-booking-service

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-aws.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 7184714be38b_add_account_status.py  78e0d09a8756_google_event_id.py  bf8351584432_auto_generate_migration.py  ceb387862674_bookingfile_model.py
appserver/: admin.py  app.py  db.py
appserver/apps/account/: admin.py  deps.py  endpoints.py  enums.py  exceptions.py  models.py  schemas.py  utils.py
appserver/apps/calendar/: admin.py  deps.py  endpoints.py  enums.py  exceptions.py  models.py  schemas.py
appserver/libs/: query.py
appserver/libs/collections/: sort.py
appserver/libs/datetime/: calendar.py  datetime.py
calendar-frontend/app/: READMD.md  account.html  index.html
calendar-frontend/app/assets/: index-BLZavtDJ.js  index-BLZavtDJ.js.map  index-CeNTDwwu.css
docs/: BACKEND_ARCHITECTURE.md
frontend/: .env.production  .prettierrc.js  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.d.ts  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: Pagination.tsx
frontend/src/hooks/: useAuth.ts  useBookings.ts  useBookingsSSE.ts  useCalendarDateSelection.ts  useCalendarEvent.ts  useCalendarNavigation.ts  useCreateBooking.ts  useHost.ts  useLogin.ts  useSignup.ts  useTimeslots.ts
tests/: conftest.py
(+42 files in other folders)
